--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,7 +7,7 @@ Flask-Cors==4.0.1
 Flask-HTTPAuth==4.8.0
 flask-marshmallow==1.2.1
 marshmallow==3.21.2
-marshmallow-sqlalchemy==0.28.1
+#marshmallow-sqlalchemy==0.28.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 itsdangerous==2.2.0
