--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,28 +1,33 @@
-requests
-Flask
-#Flask==3.0.3
-#APIFlask==2.1.1
-APIFlask
+APIFlask==2.2.0
 apispec==6.6.1
 blinker==1.8.2
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.0
+Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-HTTPAuth==4.8.0
+Flask-JWT-Extended==3.24.1
 flask-marshmallow==1.2.1
-marshmallow==3.21.2
-#marshmallow-sqlalchemy==0.28.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+marshmallow==3.21.2
 packaging==24.0
 psycopg2-binary==2.9.9
+pycparser==2.22
+PyJWT==2.9.0
+requests==2.32.3
+six==1.16.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.1
+urllib3==2.2.2
 webargs==8.4.0
 Werkzeug==3.0.3
 
-Flask-JWT-Extended==3.24.1
-PyJWT==1.7.1
 
