--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,14 @@
+alabaster==1.0.0
 APIFlask==2.2.0
 apispec==6.6.1
+babel==2.16.0
 blinker==1.8.2
 certifi==2024.7.4
 cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==43.0.0
+docutils==0.21.2
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-HTTPAuth==4.8.0
@@ -14,6 +17,7 @@ flask-marshmallow==1.2.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 idna==3.7
+imagesize==1.4.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -21,13 +25,21 @@ marshmallow==3.21.2
 packaging==24.0
 psycopg2-binary==2.9.9
 pycparser==2.22
+Pygments==2.18.0
 PyJWT==2.9.0
 requests==2.32.3
 six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==8.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-httpdomain==1.8.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.1
 urllib3==2.2.2
 webargs==8.4.0
 Werkzeug==3.0.3
-
-
