--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
     py-autoreload = 1
     http-socket = :5000
-    callable = app
+    callable = main:app 
     lazy-apps = true
-
+    chdir = /app
     # Worker Management
     #max-requests = 1000                  ; Restart workers after this many requests
     #max-worker-lifetime = 21600           ; Restart workers after this many seconds
@@ -13,7 +13,7 @@
 
 
     master = true
-    chdir = /app
+    #chdir = /app
     #module = xx.wsgi:application
     processes = 4
     socket = 0.0.0.0:8001
@@ -23,9 +23,9 @@
     max-requests = 500
     #chmod-socket = 666
     #daemonize=/home/logs/uwsgi.log
-    pidfile=/app/uwsgi.pid
+    #pidfile=/app/uwsgi.pid
     # Otherwise there'll be lots of requests logs.
-    disable-logging=true
+    disable-logging=false
     # enlarge request query size
     buffer-size = 655350
     socket-timeout = 1200
