--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,33 +1,12 @@
 [uwsgi]
-    py-autoreload = 1
-    http-socket = :5000
-    callable = main:app 
-    lazy-apps = true
-    chdir = /app
-    # Worker Management
-    #max-requests = 1000                  ; Restart workers after this many requests
-    #max-worker-lifetime = 21600           ; Restart workers after this many seconds
-    #reload-on-rss = 4048                  ; Restart workers after this much resident memory
-    #worker-reload-mercy = 100             ; How long to wait before forcefully killing workers
-    enable-threads = true
+py-autoreload = 1
+http-socket = :3000
+cheaper = 2
+processes = 4
+callable = app
 
-
-    master = true
-    #chdir = /app
-    #module = xx.wsgi:application
-    processes = 4
-    socket = 0.0.0.0:8001
-    stats = 0.0.0.0:8002
-    # clear environment on exit
-    vacuum = true
-    max-requests = 500
-    #chmod-socket = 666
-    #daemonize=/home/logs/uwsgi.log
-    #pidfile=/app/uwsgi.pid
-    # Otherwise there'll be lots of requests logs.
-    disable-logging=false
-    # enlarge request query size
-    buffer-size = 655350
-    socket-timeout = 1200
-    http-timeout = 1200
-    harakiri = 1200
+# Worker Management
+max-requests = 1000                  ; Restart workers after this many requests
+max-worker-lifetime = 21600           ; Restart workers after this many seconds
+reload-on-rss = 512                  ; Restart workers after this much resident memory
+worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
