--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -1,10 +1,11 @@
 [uwsgi]
 py-autoreload = 1
-http-socket = :3000
+http-socket = :5000
 cheaper = 2
 processes = 4
 callable = app
-
+lazy = true
+lazy-apps = true
 # Worker Management
 max-requests = 1000                  ; Restart workers after this many requests
 max-worker-lifetime = 21600           ; Restart workers after this many seconds
