--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -10,3 +10,5 @@ max-requests = 1000                  ; Restart workers after this many requests
 max-worker-lifetime = 21600           ; Restart workers after this many seconds
 reload-on-rss = 512                  ; Restart workers after this much resident memory
 worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+lazy = true
+lazy-apps = true
