--- a/uwsgi-stage.ini
+++ b/uwsgi-stage.ini
@@ -4,9 +4,12 @@ http-socket = :5000
 cheaper = 2
 processes = 4
 callable = app
-
+lazy = true
+lazy-apps = true
 # Worker Management
 max-requests = 1000                  ; Restart workers after this many requests
 max-worker-lifetime = 21600           ; Restart workers after this many seconds
 reload-on-rss = 512                  ; Restart workers after this much resident memory
 worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+
+
