--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -4,8 +4,10 @@ http-socket = :5000
 cheaper = 2
 processes = 4
 callable = app
-lazy = true
+#lazy = true
 lazy-apps = true
+enable-threads = true  # Enable threading (Silvia)
+master = true
 # Worker Management
 max-requests = 1000                  ; Restart workers after this many requests
 max-worker-lifetime = 21600           ; Restart workers after this many seconds
@@ -13,3 +15,6 @@ reload-on-rss = 512                  ; Restart workers after this much resident 
 worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
 lazy = true
 lazy-apps = true
+vacuum = true
+#die-on-term = true
+harakiri = 1200  #(Silvia)
