--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,6 +4,7 @@ http-socket = :5000
 cheaper = 2
 processes = 4
 callable = app
+enable-threads = true
 
 # Worker Management
 max-requests = 1000                  ; Restart workers after this many requests
