--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -4,7 +4,7 @@ http-socket = :5000
 cheaper = 2
 processes = 4
 callable = app
-#lazy = true
+lazy = true
 lazy-apps = true
 enable-threads = true  # Enable threading (Silvia)
 master = true
