--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,6 +5,8 @@ cheaper = 2
 processes = 4
 callable = app
 enable-threads = true
+lazy = true
+lazy-apps = true
 
 # Worker Management
 max-requests = 1000                  ; Restart workers after this many requests
