added missing lib in reqs

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcrypt==4.2.0
 blinker==1.8.2
 certifi==2024.7.4
 cffi==1.17.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==43.0.0
@@ -16,23 +17,32 @@ Flask-HTTPAuth==4.8.0
 Flask-JWT-Extended==3.24.1
 flask-marshmallow==1.2.1
 Flask-SQLAlchemy==3.1.1
+gitdb==4.0.11
+GitPython==3.1.43
 greenlet==3.0.3
 idna==3.7
 imagesize==1.4.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
+mdurl==0.1.2
 packaging==24.0
+pika==1.3.2
 pillow==11.0.0
 psycopg2-binary==2.9.9
 pycparser==2.22
 Pygments==2.18.0
+pygount==1.8.0
 PyJWT==2.9.0
 requests==2.32.3
+rich==13.9.4
 six==1.16.0
+smmap==5.0.1
 snowballstemmer==2.2.0
 Sphinx==8.0.2
+sphinx-conestack-theme==1.0.1
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -46,5 +56,3 @@ urllib3==2.2.2
 uWSGI==2.0.27
 webargs==8.4.0
 Werkzeug==3.0.3
-Sphinx==8.0.2
-pika
