--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -13,3 +13,4 @@ max-requests = 1000                  ; Restart workers after this many requests
 max-worker-lifetime = 21600           ; Restart workers after this many seconds
 reload-on-rss = 512                  ; Restart workers after this much resident memory
 worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+#harakiri = 1200                      ; How long to wait before killing a worker that's handling a request
