--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ smmap==5.0.1
 sniffio==1.3.1
 snowballstemmer==2.2.0
 Sphinx==8.0.2
-sphinx-conestack-theme==1.0.1
+#sphinx-conestack-theme==1.0.1
 sphinx-pdj-theme==0.5.0
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
