--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ bcrypt==4.2.0
 blinker==1.8.2
 boto3==1.36.15
 botocore==1.36.15
+cachelib==0.13.0
 certifi==2024.7.4
 cffi==1.17.0
 chardet==5.2.0
@@ -17,6 +18,7 @@ cryptography==43.0.0
 distro==1.9.0
 docutils==0.21.2
 Flask==3.0.3
+Flask-Caching==2.3.1
 Flask-Cors==4.0.1
 Flask-HTTPAuth==4.8.0
 Flask-JWT-Extended==3.24.1
@@ -57,7 +59,7 @@ smmap==5.0.1
 sniffio==1.3.1
 snowballstemmer==2.2.0
 Sphinx==8.0.2
-#sphinx-conestack-theme==1.0.1
+sphinx-conestack-theme==1.0.1
 sphinx-pdj-theme==0.5.0
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
