--- a/.gitignore
+++ b/.gitignore
@@ -76,13 +76,13 @@ instance/
 
 # Sphinx documentation
 #docs/_build/
-docs/_build/doctrees/
+#docs/_build/doctrees/
 #docs/_build/html/
-docs/_build/latex/
-docs/_build/man/
-docs/_build/epub/
-docs/_build/changelogs/
-docs/_build/javadocs/
+#docs/_build/latex/
+#docs/_build/man/
+#docs/_build/epub/
+#docs/_build/changelogs/
+#docs/_build/javadocs/
 #_build/
 
 # Jupyter Notebook
