--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,16 +47,16 @@ include:
   
 
 build-image:
-  #stage: build-image
-  #image: docker:latest
-  #services:
-  #  - docker:dind
-  
   stage: build-image
-  image: docker:stable 
+  image: docker:latest
   services:
-  - name: docker:18-dind  
-    command: ["--mtu=1300"]
+    - docker:dind
+  
+  #stage: build-image
+  #image: docker:stable 
+  #services:
+  #- name: docker:18-dind  
+  #  command: ["--mtu=1300"]
   
   rules:
     - if: '$CI_COMMIT_MESSAGE =~ /notbuildimage/ || $CI_COMMIT_MESSAGE =~ /forceCLEAN/'
