--- a/uwsgi-production.ini
+++ b/uwsgi-production.ini
@@ -1,12 +1,19 @@
+
 [uwsgi]
 py-autoreload = 1
 http-socket = :5000
-cheaper = 2
-processes = 4
-callable = app
 
+workers = 1
+processes = 1
+callable = app
+lazy = true
+lazy-apps = true
+enable-threads = true  # Enable threading
+master = true
 # Worker Management
-max-requests = 1000                  ; Restart workers after this many requests
-max-worker-lifetime = 21600           ; Restart workers after this many seconds
+#max-requests = 1000                  ; Restart workers after this many requests
+max-worker-lifetime = 604800           ; Restart workers after this many seconds
 reload-on-rss = 512                  ; Restart workers after this much resident memory
-worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+#worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+#harakiri = 1200                      ; How long to wait before killing a worker that's handling a request
+ 
