prep for fix prod

--- a/customization/cm_production.env
+++ b/customization/cm_production.env
@@ -1,13 +1,21 @@
 ROLES_EXPIRY_TIME=20
-SQLALCHEMY_POOL_SIZE=1
-RUN_DB_SETUP='true'
-LOG_LEVEL=INFO
-MAX_ITEMS_PER_RESPONSE=500
-PUSHER_USUARIO_CONSULTA="csolanilla@mail.jus.mendoza.gov.ar"
-PUSHER_URL="http://dev-backend.usher.pjm.gob.ar/api/v1/all_info/?desc_sistema=tareas&usuario_consulta="
-REDIS_DB=1
-BACKEND_URL_DETAIL_TASKS='http://tareas.pjm.gob.ar'
+AUTH_URL=https://dev-auth.pjm.gob.ar/auth/
 AUDIENCE=account
 REALM=internals
-AUTH_URL=https://dev-auth.pjm.gob.ar/auth/
+SQLALCHEMY_POOL_SIZE=1
+MAX_ITEMS_PER_RESPONSE=500
+PUSHER_USUARIO_CONSULTA=csolanilla@mail.jus.mendoza.gov.ar
+PUSHER_URL=http://dev-backend.usher.pjm.gob.ar/api/v1/all_info/?desc_sistema=tareas&usuario_consulta=
+BACKEND_URL_DETAIL_TASKS='https://dev-tareas.pjm.gob.ar'
+LOG_LEVEL=INFO
+UPDATECICD=2
+RUN_DB_SETUP='0'
+RUN_DB_CREATION='0'
+ALL_USERS_SUPERADMIN='0'
+RABBITMQ_QUEUE_NAME='tareas_params_dev'
+RABBITMQ_HOST=dev-amqp.infra.pjm.gob.ar
+RABBITMQ_PORT=5672
+RABBITMQ_VHOST=expediente
 CACHE_KEY_PREFIX=tareas:
+CACHE_ENABLED=false
+
