--- a/customization/cm_stage.env
+++ b/customization/cm_stage.env
@@ -12,7 +12,7 @@ UPDATECICD=2
 RUN_DB_SETUP='0'
 RUN_DB_CREATION='0'
 ALL_USERS_SUPERADMIN='1'
-RABBITMQ_QUEUE_NAME='tareas_params_dev'
+RABBITMQ_QUEUE_NAME=tareas_params_dev
 RABBITMQ_HOST=dev-amqp.infra.pjm.gob.ar
 RABBITMQ_PORT=5672
 RABBITMQ_VHOST=expediente
@@ -20,15 +20,15 @@ CACHE_KEY_PREFIX=tareas:
 CACHE_ENABLED=false
 
 
-PUSHER_API_SYSTEM='back_test'
-PUSHER_USUARIO_CONSULTA="csolanilla@mail.jus.mendoza.gov.ar"
-PUSHER_URL="http://dev-backend.usher.pjm.gob.ar/api/v1/all_info/?desc_sistema=tareas&usuario_consulta="
+PUSHER_API_SYSTEM=back_test
 
-PUSHER_URL_USUARIOS="https://dev-backend.usher.pjm.gob.ar/api/v1/usuario/?origen_datos=todo&usuario_consulta="
-PUSHER_URL_ORGANISMOS="https://dev-backend.usher.pjm.gob.ar/api/v1/organismo/?origen_datos=todo&circunscripcion_judicial=todo&usuario_consulta="
-PUSHER_URL_DOMINIOS="https://dev-backend.usher.pjm.gob.ar/api/v1/fuero/?origen_datos=todo&habilitado=H&usuario_consulta="
 
-PUSHER_URL_TIPOS_TAREAS_JUZGADO="https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/?rows=1000&usuario_consulta="
-PUSHER_URL_TIPOS_TAREAS_JUZGADO_POST="https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/"
-PUSHER_URL_TIPOS_TAREAS_PARTE="https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/?rows=1000&usuario_consulta="
-PUSHER_URL_TIPOS_TAREAS_PARTE_POST="https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/"
+
+PUSHER_URL_USUARIOS=https://dev-backend.usher.pjm.gob.ar/api/v1/usuario/?origen_datos=todo&usuario_consulta=
+PUSHER_URL_ORGANISMOS=https://dev-backend.usher.pjm.gob.ar/api/v1/organismo/?origen_datos=todo&circunscripcion_judicial=todo&usuario_consulta=
+PUSHER_URL_DOMINIOS=https://dev-backend.usher.pjm.gob.ar/api/v1/fuero/?origen_datos=todo&habilitado=H&usuario_consulta=
+
+PUSHER_URL_TIPOS_TAREAS_JUZGADO=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/?rows=1000&usuario_consulta=
+PUSHER_URL_TIPOS_TAREAS_JUZGADO_POST=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/
+PUSHER_URL_TIPOS_TAREAS_PARTE=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/?rows=1000&usuario_consulta=
+PUSHER_URL_TIPOS_TAREAS_PARTE_POST=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/
