--- a/customization/cm_production.env
+++ b/customization/cm_production.env
@@ -8,6 +8,13 @@ PUSHER_USUARIO_CONSULTA=csolanilla@mail.jus.mendoza.gov.ar
 PUSHER_URL=http://dev-backend.usher.pjm.gob.ar/api/v1/all_info/?desc_sistema=tareas&usuario_consulta=
 PUSHER_URL_TIPOS_TAREAS=http://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/?rows=1000&usuario_consulta=
 PUSHER_URL_TIPOS_TAREAS_PARTE=http://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/?rows=1000&usuario_consulta=
+PUSHER_URL_TIPOS_TAREAS_PARTE_POST=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-parte/
+PUSHER_URL_TIPOS_TAREAS_JUZGADO=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/?rows=1000&usuario_consulta=
+PUSHER_URL_TIPOS_TAREAS_JUZGADO_POST=https://dev-backend.usher.pjm.gob.ar/api/v1/tipo-act-juzgado/
+
+
+
+
 PUSHER_URL_USUARIOS=https://dev-backend.usher.pjm.gob.ar/api/v1/usuario/?origen_datos=todo&usuario_consulta=
 PUSHER_URL_ORGANISMOS=https://dev-backend.usher.pjm.gob.ar/api/v1/organismo/?origen_datos=todo&circunscripcion_judicial=todo&usuario_consulta=
 PUSHER_URL_DOMINIOS=https://dev-backend.usher.pjm.gob.ar/api/v1/fuero/?origen_datos=todo&habilitado=H&usuario_consulta=
