--- a/uwsgi.dev-localhost.ini
+++ b/uwsgi.dev-localhost.ini
@@ -16,3 +16,8 @@ reload-on-rss = 512                  ; Restart workers after this much resident 
 #worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
 #harakiri = 1200                      ; How long to wait before killing a worker that's handling a request
  
+add-header = Access-Control-Allow-Origin: https://localhost:3000
+add-header = Access-Control-Allow-Credentials: true
+add-header = Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
+add-header = Access-Control-Allow-Headers: Content-Type, Authorization, X-Requested-With, Accept, x-api-key, x-api-system, x-user-role
+http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
