--- a/uwsgi-production.ini
+++ b/uwsgi-production.ini
@@ -1,24 +1,52 @@
-
 [uwsgi]
-
-http-socket = :5000
-
-workers = 1
-processes = 1
+# Application
+wsgi-file = main.py
 callable = app
+module = main:app
+
+# Socket configuration
+http-socket = :5000
+http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
+
+# Process management
+master = true
+processes = 2
+threads = 2
+enable-threads = true
+
+# Lazy loading (important for Flask app initialization)
 lazy = true
 lazy-apps = true
-enable-threads = true  # Enable threading
-master = true
-# Worker Management
-#max-requests = 1000                  ; Restart workers after this many requests
-max-worker-lifetime = 604800           ; Restart workers after this many seconds
-reload-on-rss = 512                  ; Restart workers after this much resident memory
-#worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
-#harakiri = 1200                      ; How long to wait before killing a worker that's handling a request
- 
- add-header = Access-Control-Allow-Origin: https://localhost:3000
-add-header = Access-Control-Allow-Credentials: true
-add-header = Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
-add-header = Access-Control-Allow-Headers: Content-Type, Authorization, X-Requested-With, Accept, x-api-key, x-api-system, x-user-role
-http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
+
+# Worker lifecycle management
+max-requests = 1000
+max-requests-delta = 100
+max-worker-lifetime = 3600
+reload-on-rss = 512
+worker-reload-mercy = 60
+
+# Timeouts
+harakiri = 300
+socket-timeout = 300
+http-timeout = 300
+
+# Logging
+log-4xx = true
+log-5xx = true
+disable-logging = false
+log-date = true
+
+# Performance
+vacuum = true
+die-on-term = true
+need-app = true
+
+# Signal handling for graceful shutdown (important for Cloud Run)
+hook-master-start = unix_signal:15 gracefully_kill_them_all
+
+# Buffer sizes
+buffer-size = 32768
+post-buffering = 8192
+
+# Note: CORS headers are handled by Flask-CORS in main.py
+# Do not add CORS headers here to avoid conflicts
