--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,21 +1,44 @@
 [uwsgi]
-py-autoreload = 0
-http-socket = :5000
-processes = 1
-workers = 1
+# Application
+wsgi-file = main.py
 callable = app
+module = main:app
+
+# Socket configuration
+http-socket = :5000
+http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
+
+# Development mode - single process
+master = true
+processes = 1
+threads = 2
 enable-threads = true
+
+# Auto-reload on code changes (development only)
+py-autoreload = 1
+
+# Lazy loading
 lazy = true
 lazy-apps = true
 
 # Worker Management
-max-requests = 1000                  ; Restart workers after this many requests
-max-worker-lifetime = 21600           ; Restart workers after this many seconds
-reload-on-rss = 512                  ; Restart workers after this much resident memory
-worker-reload-mercy = 80             ; How long to wait before forcefully killing workers
+max-requests = 1000
+max-worker-lifetime = 21600
+reload-on-rss = 512
+worker-reload-mercy = 80
 
-add-header = Access-Control-Allow-Origin: https://localhost:3000
-add-header = Access-Control-Allow-Credentials: true
-add-header = Access-Control-Allow-Methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
-add-header = Access-Control-Allow-Headers: Content-Type, Authorization, X-Requested-With, Accept, x-api-key, x-api-system, x-user-role
-http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
+# Timeouts (more lenient for development)
+harakiri = 300
+socket-timeout = 300
+
+# Logging - verbose for development
+log-4xx = true
+log-5xx = true
+disable-logging = false
+log-date = true
+
+# Performance
+vacuum = true
+die-on-term = true
+
+# Note: CORS headers are handled by Flask-CORS in main.py
