--- a/uwsgi-production.ini
+++ b/uwsgi-production.ini
@@ -4,13 +4,13 @@ wsgi-file = main.py
 callable = app
 module = main:app
 
-# Socket configuration
-http-socket = :5000
+# Socket configuration - CRITICAL: Use 0.0.0.0 for Cloud Run
+http = 0.0.0.0:5000
 http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
 
-# Process management
+# Process management - Start with 1 process for Cloud Run
 master = true
-processes = 2
+processes = 1
 threads = 2
 enable-threads = true
 
@@ -30,11 +30,12 @@ harakiri = 300
 socket-timeout = 300
 http-timeout = 300
 
-# Logging
+# Logging - VERBOSE for debugging
 log-4xx = true
 log-5xx = true
 disable-logging = false
 log-date = true
+log-x-forwarded-for = true
 
 # Performance
 vacuum = true
@@ -47,6 +48,14 @@ hook-master-start = unix_signal:15 gracefully_kill_them_all
 # Buffer sizes
 buffer-size = 32768
 post-buffering = 8192
+
+# Logging to stdout (important for Cloud Run)
+logto = /dev/stdout
+
+# Disable request logging for health checks
+route-run = log:Health check - skipping log
+route-if = equal:${PATH_INFO};/livez last:
+route-if = equal:${PATH_INFO};/readyz last:
 
 # Note: CORS headers are handled by Flask-CORS in main.py
 # Do not add CORS headers here to avoid conflicts
