--- a/cloudbuild-with-substitutions.yaml
+++ b/cloudbuild-with-substitutions.yaml
@@ -27,26 +27,24 @@ steps:
     id: 'push-latest'
     waitFor: ['build']
   
-  # Deploy to Cloud Run
+  # Deploy to Cloud Run - Initial deploy without DB vars
+  # Database and auth vars should be configured separately for security
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
       - 'tareas-back'
       - '--image=gcr.io/$PROJECT_ID/tareas-back:$COMMIT_SHA'
-      - '--region=us-west1'
+      - '--region=${_REGION}'
       - '--platform=managed'
       - '--port=5000'
-      - '--cpu=1'
-      - '--memory=512Mi'
-      - '--timeout=300'
-      - '--min-instances=0'
-      - '--max-instances=10'
+      - '--cpu=${_CPU}'
+      - '--memory=${_MEMORY}'
+      - '--timeout=${_TIMEOUT}'
+      - '--min-instances=${_MIN_INSTANCES}'
+      - '--max-instances=${_MAX_INSTANCES}'
       - '--allow-unauthenticated'
-      # Environment variables (all in one --set-env-vars)
-      # ⚠️ IMPORTANT: Configure database and auth variables separately with:
-      # gcloud run services update tareas-back --region us-west1 --update-env-vars="postgres_user=USER,postgres_password=PASS,..."
-      - '--set-env-vars=CORS_ORIGINS=https://your-frontend.com,CORS_ALLOW_CREDENTIALS=true,LOG_LEVEL=INFO,RUN_DB_SETUP=0,RUN_DB_CREATION=0'
+      - '--set-env-vars=CORS_ORIGINS=${_CORS_ORIGINS},CORS_ALLOW_CREDENTIALS=true,LOG_LEVEL=${_LOG_LEVEL},RUN_DB_SETUP=0,RUN_DB_CREATION=0'
     id: 'deploy'
     waitFor: ['push-sha', 'push-latest']
 
@@ -54,9 +52,20 @@ images:
   - 'gcr.io/$PROJECT_ID/tareas-back:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/tareas-back:latest'
 
+# Substitution variables with defaults
+substitutions:
+  _REGION: 'us-west1'
+  _CPU: '1'
+  _MEMORY: '512Mi'
+  _TIMEOUT: '300'
+  _MIN_INSTANCES: '0'
+  _MAX_INSTANCES: '10'
+  _CORS_ORIGINS: 'http://localhost:5173'
+  _LOG_LEVEL: 'INFO'
+
 # Build configuration
-timeout: '1800s'  # 30 minutes
+timeout: '1800s'
 
 options:
-  machineType: 'E2_HIGHCPU_8'  # Use more powerful machine for faster builds
+  machineType: 'E2_HIGHCPU_8'
   logging: CLOUD_LOGGING_ONLY
