--- a/uwsgi-production.ini
+++ b/uwsgi-production.ini
@@ -4,8 +4,9 @@ wsgi-file = main.py
 callable = app
 module = main:app
 
-# Socket configuration - CRITICAL: Use 0.0.0.0 for Cloud Run
-http = 0.0.0.0:5000
+# Socket configuration - Port will be overridden by command line --http flag
+# This is just a placeholder, actual port comes from start-uwsgi.sh
+# Do NOT use http here when using --http in command line
 http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
 
 # Process management - Start with 1 process for Cloud Run
