--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -43,12 +43,44 @@ steps:
       - '--min-instances=0'
       - '--max-instances=10'
       - '--allow-unauthenticated'
-      # Environment variables (all in one --set-env-vars)
-      # ⚠️ IMPORTANT: Configure database and auth variables separately with:
-      # gcloud run services update tareas-back --region us-west1 --update-env-vars="postgres_user=USER,postgres_password=PASS,..."
-      - '--set-env-vars=CORS_ORIGINS=https://your-frontend.com,CORS_ALLOW_CREDENTIALS=true,LOG_LEVEL=INFO,RUN_DB_SETUP=0,RUN_DB_CREATION=0'
+      # Environment variables
+      # CORS Configuration
+      - '--set-env-vars=ALLOWED_ORIGINS=http://localhost:3000'
+      # Auth/JWT Configuration - REEMPLAZAR CON TUS VALORES REALES
+      - '--update-env-vars=AUTH_URL=https://tu-keycloak.com/auth'
+      - '--update-env-vars=REALM=tu-realm'
+      - '--update-env-vars=AUDIENCE=tu-audience'
+      # Database Configuration - USAR SECRET MANAGER O CONFIGURAR DESPUÉS
+      - '--update-env-vars=postgres_user=$$POSTGRES_USER'
+      - '--update-env-vars=postgres_password=$$POSTGRES_PASSWORD'
+      - '--update-env-vars=postgres_base=$$POSTGRES_BASE'
+      # Redis Configuration (disabled by default)
+      - '--update-env-vars=redis_host=localhost'
+      - '--update-env-vars=redis_port=6379'
+      - '--update-env-vars=redis_password='
+      - '--update-env-vars=redis_user=default'
+      - '--update-env-vars=redis_db=0'
+      - '--update-env-vars=redis_uses_password=False'
+      - '--update-env-vars=cache_enabled=False'
+      # RabbitMQ Configuration
+      - '--update-env-vars=RABBITMQ_USER=guest'
+      - '--update-env-vars=RABBITMQ_PASSWORD=guest'
+      - '--update-env-vars=RABBITMQ_HOST=localhost'
+      - '--update-env-vars=RABBITMQ_PORT=5672'
+      - '--update-env-vars=RABBITMQ_VHOST=/'
+      - '--update-env-vars=RABBITMQ_QUEUE_NAME=tareas_queue'
+      # Application Configuration
+      - '--update-env-vars=RUN_DB_SETUP=0'
+      - '--update-env-vars=RUN_DB_CREATION=0'
+      - '--update-env-vars=SQLALCHEMY_POOL_SIZE=5'
+      - '--update-env-vars=MAX_ITEMS_PER_RESPONSE=100'
+      - '--update-env-vars=LOG_LEVEL=INFO'
+      - '--update-env-vars=ALL_USERS_SUPERADMIN=0'
+      - '--update-env-vars=SWAGGER_VERSION=5.27.0'
     id: 'deploy'
     waitFor: ['push-sha', 'push-latest']
+    # Uncomment below if using Secret Manager
+    # secretEnv: ['POSTGRES_USER', 'POSTGRES_PASSWORD', 'POSTGRES_BASE']
 
 images:
   - 'gcr.io/$PROJECT_ID/tareas-back:$COMMIT_SHA'
@@ -60,3 +92,13 @@ timeout: '1800s'  # 30 minutes
 options:
   machineType: 'E2_HIGHCPU_8'  # Use more powerful machine for faster builds
   logging: CLOUD_LOGGING_ONLY
+
+# Secrets from Secret Manager (opcional - descomenta si usas Secret Manager)
+# availableSecrets:
+#   secretManager:
+#   - versionName: projects/$PROJECT_ID/secrets/postgres-user/versions/latest
+#     env: 'POSTGRES_USER'
+#   - versionName: projects/$PROJECT_ID/secrets/postgres-password/versions/latest
+#     env: 'POSTGRES_PASSWORD'
+#   - versionName: projects/$PROJECT_ID/secrets/postgres-base/versions/latest
+#     env: 'POSTGRES_BASE'
