--- a/uwsgi-production.ini
+++ b/uwsgi-production.ini
@@ -4,59 +4,39 @@ wsgi-file = main.py
 callable = app
 module = main:app
 
-# Socket configuration - Port will be overridden by command line --http flag
-# This is just a placeholder, actual port comes from start-uwsgi.sh
-# Do NOT use http here when using --http in command line
+# Socket configuration - Port is set via command line --http flag
+# DO NOT set http or http-socket here, it's set in start-uwsgi.sh
 http-allow-methods = GET, POST, PUT, PATCH, DELETE, OPTIONS
 
-# Process management - Start with 1 process for Cloud Run
+# Process management - Optimized for Cloud Run
 master = true
 processes = 1
-threads = 2
+threads = 4
 enable-threads = true
 
-# Lazy loading (important for Flask app initialization)
-lazy = true
+# Lazy loading - faster startup
 lazy-apps = true
 
-# Worker lifecycle management
-max-requests = 1000
-max-requests-delta = 100
-max-worker-lifetime = 3600
-reload-on-rss = 512
-worker-reload-mercy = 60
+# Timeouts - Critical for Cloud Run
+harakiri = 120
+http-timeout = 120
+socket-timeout = 120
 
-# Timeouts
-harakiri = 300
-socket-timeout = 300
-http-timeout = 300
-
-# Logging - VERBOSE for debugging
+# Logging to stdout (CRITICAL for Cloud Run)
+logto = /dev/stdout
 log-4xx = true
 log-5xx = true
 disable-logging = false
 log-date = true
-log-x-forwarded-for = true
+log-format = %(addr) - %(user) [%(ltime)] "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
 
-# Performance
-vacuum = true
+# Graceful shutdown
 die-on-term = true
-need-app = true
+vacuum = true
+max-requests = 1000
 
-# Signal handling for graceful shutdown (important for Cloud Run)
-hook-master-start = unix_signal:15 gracefully_kill_them_all
-
-# Buffer sizes
-buffer-size = 32768
+# Buffer sizes - important for Cloud Run
+buffer-size = 8192
 post-buffering = 8192
 
-# Logging to stdout (important for Cloud Run)
-logto = /dev/stdout
-
-# Disable request logging for health checks
-route-run = log:Health check - skipping log
-route-if = equal:${PATH_INFO};/livez last:
-route-if = equal:${PATH_INFO};/readyz last:
-
-# Note: CORS headers are handled by Flask-CORS in main.py
-# Do not add CORS headers here to avoid conflicts
+# Note: CORS handled by Flask-CORS in main.py
